Make downloads work when history database fails to initialize.

Previously all download calls will be stuck when history database fails
to initialize.

This CL assigns 1 as the first id when history database failed to load,
all downloads in this browser session will not be persisted to history
database.

Bug: 736511
Change-Id: If4db04ca518633a7dd999f45629e60e97fc78b1a
Reviewed-on: https://chromium-review.googlesource.com/587327
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490540}
Former-commit-id: d1bc5d0b5f6336fe076466ee42644b2e8fef4bc6