chrome/browser/download/chrome_download_manager_delegate.h
@@ -152,8 +152,11 @@ class ChromeDownloadManagerDelegate
       uint32_t download_id,
       const base::Closure& user_complete_callback);
 
+  // Sets the next download id based on download database records, and runs all
+  // cached id callbacks.
   void SetNextId(uint32_t id);
 
+  // Runs the |callback| with next id. Results in the download being started.
   void ReturnNextId(const content::DownloadIdCallback& callback);
 
   void OnDownloadTargetDetermined(
@@ -169,7 +172,14 @@ class ChromeDownloadManagerDelegate
   bool ShouldBlockFile(content::DownloadDangerType danger_type) const;
 
   Profile* profile_;
+
+  // Incremented by one for each download, the first available download id is
+  // assigned from history database or 1 when history database fails to
+  // intialize.
   uint32_t next_download_id_;
+
+  // The |GetNextId| callbacks that may be cached before loading the download
+  // database.
   IdCallbackVector id_callbacks_;
   std::unique_ptr<DownloadPrefs> download_prefs_;
 
